--- a/paste_app/package.json
+++ b/paste_app/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.13.0",
     "router": "^2.2.0"
   },
   "devDependencies": {
