--- a/paste_app/package.json
+++ b/paste_app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "router": "^2.2.0"
   },
   "devDependencies": {
